@@ -1,8 +1,12 @@
 package com.open3hr.adeies.services.impl;
 
+import com.open3hr.adeies.dto.EmployeeDTO;
 import com.open3hr.adeies.dto.UserDTO;
+import com.open3hr.adeies.entities.Employee;
 import com.open3hr.adeies.entities.User;
+import com.open3hr.adeies.repositories.EmployeeRepository;
 import com.open3hr.adeies.repositories.UserRepository;
+import com.open3hr.adeies.services.EmployeeService;
 import com.open3hr.adeies.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,25 +18,24 @@ import java.util.stream.Collectors;
 @Service
 public class UserServiceImpl implements UserService {
 
-    private final UserRepository userRepository;
+    @Autowired
+    private UserRepository userRepository;
 
     @Autowired
-    public UserServiceImpl(UserRepository userRepository) {
-        this.userRepository = userRepository;
-    }
+    private EmployeeRepository employeeRepository;
 
     @Override
     public List<UserDTO> findAll() {
         return userRepository.findAll().stream()
                 .map(UserDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserDTO findById(Integer id) {
-        Optional<User> userOptional = userRepository.findById(id);
-        if (userOptional.isPresent()) {
-            return new UserDTO(userOptional.get());
+        Optional<User> myUser = userRepository.findById(id);
+        if (myUser.isPresent()) {
+            return new UserDTO(myUser.get());
         } else {
             throw new RuntimeException("Couldn't find user with id: " + id);
         }
@@ -40,11 +43,25 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserDTO save(UserDTO userDTO) {
-        return new UserDTO(userRepository.save(userDTO.toUser()));
+        User myUser = new User(userDTO);
+        return new UserDTO(userRepository.save(myUser));
     }
 
     @Override
     public void deleteById(Integer id) {
         userRepository.findById(id).orElseThrow(() -> new RuntimeException("User with id " + id + " not found"));
+    }
+
+    @Override
+    public UserDTO createAccount(UserDTO userDTO) {
+        Optional<Employee> myEmployee = employeeRepository.findById(userDTO.getEmployeeId());
+        if (myEmployee.isPresent()) {
+            userRepository.save(new User(userDTO));
+            return userDTO;
+        } else {
+            throw new RuntimeException("Employee not found, couldn't create new account.");
+        }
+
+
     }
 }
